syntax = "proto3";
package proto;
option go_package = "github.com/grepplabs/kafka-proxy/plugin/local-auth-scram/proto";

message LoadCredentialRequest {
    string storeinfo = 1;
}

message GetCredentialResponse {
    string username = 1;
    string password = 2;
}

service ScramAuthenticator {
    rpc GetCredential(LoadCredentialRequest) returns (GetCredentialResponse);
}
